--- a/package.json
+++ b/package.json
@@ -4,26 +4,33 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js",
-    "build": "webpack --config webpack.config.js"
+    "start": "npm run dev",
+    "dev": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/three": "^0.158.1",
+    "@types/three": "^0.183.1",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "html-webpack-plugin": "^5.5.3",
-    "ts-loader": "^9.5.0",
-    "typescript": "^5.2.2",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "copy-webpack-plugin": "^13.0.1",
+    "css-loader": "^6.10.0",
+    "html-webpack-plugin": "^5.6.6",
+    "mini-css-extract-plugin": "^2.7.7",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.4",
+    "typescript": "^5.9.3",
+    "webpack": "^5.105.2",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.3",
+    "webpack-merge": "^6.0.1"
   },
   "dependencies": {
-    "dotenv-webpack": "^8.0.1",
+    "dotenv-webpack": "^8.1.1",
     "stats.js": "^0.17.0",
-    "three": "^0.158.0"
+    "three": "^0.183.1"
   }
 }
