--- a/package.json
+++ b/package.json
@@ -6,18 +6,29 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "lint": "eslint . --ext .ts,.js",
+    "lint:fix": "eslint . --ext .ts,.js --fix",
+    "format": "prettier . --check",
+    "format:write": "prettier . --write",
+    "check": "npm run lint && npm run format && npm run typecheck"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/three": "^0.183.1",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^6.10.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "html-webpack-plugin": "^5.6.6",
     "mini-css-extract-plugin": "^2.7.7",
+    "prettier": "^3.3.3",
     "sass": "^1.71.1",
     "sass-loader": "^14.2.1",
     "style-loader": "^3.3.4",
