--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "lint:fix": "eslint . --ext .ts,.js --fix",
     "format": "prettier . --check",
     "format:write": "prettier . --write",
-    "check": "npm run lint && npm run format && npm run typecheck"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "check": "npm run lint && npm run format && npm run typecheck",
+    "check:all": "npm run check && npm run test"
   },
   "keywords": [],
   "author": "",
@@ -30,11 +34,14 @@
     "html-webpack-plugin": "^5.6.6",
     "mini-css-extract-plugin": "^2.7.7",
     "prettier": "^3.3.3",
+    "@vitest/coverage-v8": "^2.1.8",
+    "jsdom": "^24.1.3",
     "sass": "^1.71.1",
     "sass-loader": "^14.2.1",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.4",
     "typescript": "^5.9.3",
+    "vitest": "^2.1.8",
     "webpack": "^5.105.2",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.3",
