--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "check": "npm run lint && npm run format && npm run typecheck",
-    "check:all": "npm run check && npm run test"
+    "check:all": "npm run check && npm run test",
+    "prepare": "husky install || true"
   },
   "keywords": [],
   "author": "",
@@ -34,6 +35,8 @@
     "html-webpack-plugin": "^5.6.6",
     "mini-css-extract-plugin": "^2.7.7",
     "prettier": "^3.3.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.11",
     "@vitest/coverage-v8": "^2.1.8",
     "jsdom": "^24.1.3",
     "sass": "^1.71.1",
@@ -46,6 +49,14 @@
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.3",
     "webpack-merge": "^6.0.1"
+  },
+  "lint-staged": {
+    "*.{ts,js}": [
+      "eslint --fix"
+    ],
+    "*.{ts,js,css,scss,html,json,md}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "dotenv-webpack": "^8.1.1",
