adding cinematic mode

--- a/package.json
+++ b/package.json
@@ -20,8 +20,29 @@
     "check:all": "npm run check && npm run test",
     "prepare": "husky install || true"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "solar-system",
+    "astronomy",
+    "space",
+    "3d",
+    "threejs",
+    "webgl",
+    "typescript",
+    "webpack",
+    "shader",
+    "glsl",
+    "postprocessing",
+    "bloom",
+    "css2drenderer",
+    "ui",
+    "responsive",
+    "mobile-first",
+    "simulation",
+    "orbital-mechanics",
+    "camera-controls",
+    "occlusion"
+  ],
+  "author": "Christina Marie Busacker",
   "license": "MIT",
   "devDependencies": {
     "@types/three": "^0.183.1",
